# neuronbot2_lecture

./: README.md  log.md  test.cpp
building/: model.sdf
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: GoalFeedback.msg
custom_nav2_behavior_tree/: CMakeLists.txt  README.md  package.xml
custom_nav2_behavior_tree/src/: behavior_tree_engine.cpp
custom_nav2_bt_navigator/: CMakeLists.txt  package.xml
custom_nav2_bt_navigator/behavior_trees/: navigate_w_replanning_and_round_robin_recovery.xml
custom_nav2_bt_navigator/src/: bt_navigator.cpp  main.cpp  ros_topic_logger.cpp
custom_nav2_msgs/: CMakeLists.txt  package.xml
custom_nav2_rviz_plugins/: CMakeLists.txt  package.xml
custom_nav2_rviz_plugins/src/: goal_tool.cpp  nav2_panel.cpp  temp_nav2_panel.cpp
custom_nav2_util/: CMakeLists.txt  package.xml
custom_nav2_util/include/custom_nav2_util/: clear_entirely_costmap_service_client.hpp  costmap.hpp  lifecycle_node.hpp  lifecycle_service_client.hpp  lifecycle_utils.hpp  odometry_utils.hpp  service_client.hpp
custom_nav2_util/src/: CMakeLists.txt  costmap.cpp  dump_params.cpp  lifecycle_bringup_commandline.cpp  lifecycle_node.cpp  lifecycle_service_client.cpp  lifecycle_utils.cpp  node_thread.cpp  node_utils.cpp  odometry_utils.cpp  robot_utils.cpp  string_utils.cpp
fusionbot_description/: CMakeLists.txt  log.txt  package.xml
fusionbot_description/launch/: controller.launch  controller.yaml  display.launch  fusionbot_description.launch.py  fusionbot_gazebo.launch.py  gazebo.launch  neuronbot_gazebo.launch.py
fusionbot_description/meshes/: lidar_1.stl  right_wheel_1.stl
fusionbot_description/rviz/: description.rviz
fusionbot_description/scripts/: spawn_robot.py
fusionbot_description/urdf/: fusionbot.gazebo  fusionbot.sdf  fusionbot.trans  fusionbot.urdf  fusionbot.urdf.xacro  fusionbot.xacro  fusionbot_description.urdf  fusionbot_lidar.sdf  materials.xacro  skidbot.urdf
fusionbot_gazebo/: CMakeLists.txt  package.xml  test.rviz
fusionbot_gazebo/launch/: aws_factory.launch.py  caffee_world.launch.py  fusionbot_aws_factory.launch.py  moon_walk.launch.py  moving_box.launch.py  my_world.launch.py  racecourse.launch.py  synced_actor.launch.py  walk.launch.py
fusionbot_gazebo/world/: animated_box.world  caffee.world  custom_world  fusionbot_factory.world  racecar_course.world  synced_actor.world
nav2_cafe_pkg/: CMakeLists.txt  log.md  package.xml
nav2_cafe_pkg/launch/: bringup_launch.py  caffee_world.launch.py  hanyang_bringup_launch.py  localization_launch.py  navigation_launch.py  no_actor_caffee_world.launch.py  rviz_view_launch.py
nav2_cafe_pkg/map/: hanyang_office.pgm  hanyang_office.yaml
nav2_cafe_pkg/param/: neuronbot_dwb.yaml  neuronbot_pure_pursuit.yaml
nav2_cafe_pkg/rviz/: nav2_default_view.rviz
nav2_cafe_pkg/world/: caffee_with_neuronbot.world  no_actor_caffee.world  no_actor_caffee_with_neuronbot.world
nav2_maze_pkg/: CMakeLists.txt  log.md  package.xml
nav2_maze_pkg/launch/: bringup_launch.py  custom_bringup_launch.py  custom_navigation_launch.py  localization_launch.py  maze_gazebo.launch.py  navigation_launch.py  rviz_view_launch.py
nav2_maze_pkg/param/: neuronbot_params.yaml  neuronbot_params_astart.yaml  neuronbot_params_critics.yaml  neuronbot_params_tolerance.yaml  neuronbot_pure_pursuit.yaml  neuronbot_straight_planner.yaml
nav2_maze_pkg/rviz/: nav2_default_view.rviz
nav2_maze_pkg/world/: simple_maze_with_neuronbot.world  small_maze
neuronbot2_amcl/: CMakeLists.txt  log.mg  package.xml
neuronbot2_amcl/launch/: amcl.launch.py
neuronbot2_amcl/param/: amcl_change_particle.yaml  amcl_laser_range.yaml
neuronbot2_amcl/rviz/: nav2_localization.rviz
neuronbot2_amcl/scripts/: initial_pose_pub.py  set_param.py
neuronbot2_lecture/: CMakeLists.txt  package.xml
neuronbot2_lecture/launch/: empty_gazebo.launch.py  laser_odom.launch.py  neuronbot_description.launch.py  rosbag_odom_rviz.launch.py  spot.launch.py
neuronbot2_lecture/rviz/: description.rviz  laser_odom.rviz  rosbag_odom.rviz  spot.rviz
neuronbot2_lecture/urdf/: accessories.urdf  accessories.urdf.xacro  macros.xacro  neuronbot2_xacro.urdf  spot.urdf  spot.urdf.xacro  (+1 more)
neuronbot2_mapping/: CMakeLists.txt  log.md  package.xml
neuronbot2_obstacle_avoidance/: CMakeLists.txt  log.md  package.xml
neuronbot2_path_planning/: CMakeLists.txt  log.md  package.xml
neuronbot2_path_planning/config/: basicbot_param.yaml  custom_navigator_params.yaml  neuronbot_params2.yaml  neuronbot_params_test.yaml  neuronbot_params_without_pathalign.yaml  neuronbot_straight_planner.yaml  sw_neuronbot_params.yaml  sw_neuronbot_params_v2.yaml
neuronbot2_path_planning/launch/: bringup_launch.py  custom_bringup_launch.py  custom_navigation_launch.py  localization_launch.py  navigation_launch.py  rviz_view_launch.py
neuronbot2_path_planning/map/: maze_map.pgm  maze_map.yaml
neuronbot2_path_planning/rviz/: custom_nav2_view.rviz  maze.rviz  nav2_default_view.rviz  sw_nav2.rviz
neuronbot2_path_planning/scripts/: goal_pose_pub.py  nav_to_pose_action_client.py  nav_to_pose_demo.py  robot_navigator.py  waypoint_follower_demo.py
neuronbot2_path_planning/src/: test.cpp
neuronbot2_sensor_fusion/: CMakeLists.txt  package.xml
parameter_tutorials/: CMakeLists.txt  package.xml
py_param_tutorial/: log.md  package.xml  setup.py
py_udp_ros2/: package.xml  setup.cfg  setup.py
qos_example/: package.xml  setup.cfg  setup.py
universal_package_tutorial/: CMakeLists.txt  package.xml
(+91 files in other folders)
