<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_nav2_util</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tge1375@naver.com">kimsooyoung</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>libboost-program-options-dev</build_depend>
  <depend>nav2_common</depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>nav2_msgs</depend>
  <depend>custom_nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>test_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>launch</depend>
  <depend>launch_testing_ament_cmake</depend>
  <depend>action_msgs</depend>

  <exec_depend>libboost-program-options</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>action_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
